--- a/atlassian/wiki/docker-compose.yml
+++ b/atlassian/wiki/docker-compose.yml
@@ -1,17 +1,9 @@
 version: '2'
 
 services:
-      jira:
-          container_name: jira
-          build: ./project-manage
-          ports:
-              - "9001:8080"
-          links:
-              - mysql
-
       confluence:
           container_name: confluence
-          build: ./wiki
+          build: .
           ports:
               - "9002:8090"
           links:
@@ -32,4 +24,4 @@ services:
             # - /opt/docker/mysql/conf:/etc/mysql/mysql.conf.d
             - ./opt/docker/mysql/data:/usr/local/mysql/data
             - ./opt/docker/mysql/logs/:/usr/local/mysql/logs
-          command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES utf8mb4;' --innodb-flush-log-at-trx-commit=0
+          command: mysqld --character-set-server=utf8 --collation-server=utf8_bin --init-connect='SET NAMES utf8;' --innodb-flush-log-at-trx-commit=0 --transaction-isolation=READ-COMMITTED
